// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section Divider should render successfully - no children 1`] = `
<body>
  <div>
    <div
      aria-labelledby="section divider"
    >
      <hr
        aria-hidden="true"
        class=" border-black border-1 m-0 my-5"
        role="presentation"
      />
    </div>
  </div>
</body>
`;

exports[`Section Divider should render successfully - with children 1`] = `
<body>
  <div>
    <div
      aria-labelledby="section divider"
    >
      <div
        class="flex flex-row gap-x-2 items-center my-2"
      >
        <hr
          aria-hidden="true"
          class="flex flex-auto border-black border-1 m-0 box-border my-auto"
          role="presentation"
        />
        <h5
          class="flex flex-shrink justify-center font-bold text-base uppercase"
        >
          App
        </h5>
        <hr
          aria-hidden="true"
          class="flex flex-auto border-black border-1 m-0 box-border my-auto"
          role="presentation"
        />
      </div>
    </div>
  </div>
</body>
`;
